styles.css
* { padding: 0; margin: 0; }
* { border: 1px red solid;}

button {
	cursor: pointer;
}

.choice-result {
    display: none;
}
.ship-grid{
	margin: 0 auto;
	display: grid;
	width: 75vw;
    height: 100vh;
	
	grid-template-areas: 
		"lewis lewis"
		"lewis lewis"
		"choose choose"
		"rocket rocket"		
}

.ship-choices{
	margin: 0 auto;
	grid-area: rocket;
	width: fit-content;
}

.ship-link{
	margin: auto;
	display: inline;
	
}
.ship-image{
	width: 49%;
}

.choose-ship{
	grid-area: choose;
	font-size: 2em;
	margin: auto;
}

.direction-screen {
	background-image: url("img/background.jpg");
	background-size: cover;
	width: 100vw;
	height: 100vh;
	margin: 0 auto;
	display: grid;
	width: 100vw;
    height: 100vh;
	
	grid-template-areas: 
		"uparrow uparrow uparrow"
		"leftarrow rocket rightarrow"
		"text text text"
}

.direction-text {
	grid-area: text
}

.right-arrow {
	grid-area: rightarrow;
	

}

.up-arrow {
	grid-area: uparrow;
	display: block;
	margin-left: auto;
	margin-right: auto;
	

	 

}

.left-arrow {
	grid-area: leftarrow;


}

#choose-ship-root {
	background-image: url("img/background.jpg");
	background-size: cover;
    width: 100vw;
    height: 100vh;
    background-repeat: no-repeat;
    background-position: center;
	
}

#backstory-root {	
    background-image: url("img/backstory-background.jpg");
    background-size: cover;
    width: 100vw;
    height: 100vh;
    background-repeat: no-repeat;
    background-position: center;
}

.lewis-logo {	
	grid-area: lewis;
	margin: auto;
	width: 75%
}

.begin-button {
	display: block;
	text-align: center;
}

.crew {
	width: 200px;
	background-color: red;
}

.two-choices h2 {
	text-align: center;
	color: #36be36;
	padding: 0 0 20px 0;
}

.two-choices p {
	margin: 10px;
	color: rgb(202, 189, 129);
}

.choicea {
	background: url("img/choice-a-button.png");
}
.choiceb {
	background: url("img/choice-b-button.png");
}
.choicea,
.choiceb {
	background-size: contain;
	background-repeat: no-repeat;
	width: 300px;
	height: 68px;
	box-shadow: 0px 0px 40px rgb(156, 150, 112);
	border: none;
	margin: 20px;
}


.choice {
	border-top: 1px solid rgb(156, 150, 112);
	padding: 20px;
	text-align: center;
	width: 50%;
	display: absolute;
	top: 50;
	left: 50;
}

.choices {
	text-align: center;
	display: flex;
	margin: 0 30px 50px;
}

.event-image {
	width: 100vw;
}

.event-text {
	padding: 50px;
}

.event-text h1 {
	text-align: center;
	color: #36be36;
	padding: 0 0 15px 0;
	font-size: 3em;
}

.event-text p {
	color: rgb(196, 167, 38);
}


.game-continue-button,
.game-results,
.start-over-button,
.dark-influence-button,
.get-fuel-button,
.ending-button,
.pirate,
.evil,
.darth {
	display: none;
}
/* 
** CREDIT FOR STAR WARS SCROLL GOES TO 
** Craig Buckler
** http://www.sitepoint.com/css3-starwars-scrolling-text/
body, html 
*/
body, html
{
  width: 100%;
  height: 100%;
  font-family: sans-serif;
	font-weight: 700;
	color: #daa520;
	background-color: #000;
}
#titles
{
	position: absolute;
	width: 18em;
	height: 50em;
	bottom: 0;
	margin-left: -9em;
	left: 50%;
	font-size: 350%;
	text-align: justify;
	overflow: hidden;
	-webkit-transform-origin: 50% 100%;
	-moz-transform-origin: 50% 100%;
	-ms-transform-origin: 50% 100%;
	-o-transform-origin: 50% 100%;
	transform-origin: 50% 100%;
	-webkit-transform: perspective(50vh) rotateX(25deg);
	-moz-transform: perspective(50vh) rotateX(25deg);
	-ms-transform: perspective(50vh) rotateX(25deg);
	-o-transform: perspective(50vh) rotateX(25deg);
	transform: perspective(50vh) rotateX(25deg);
	text-shadow: 6px 6px black;
}

#titles:after
{
	position: absolute;
	content: ' ';
	left: 0;
	right: 0;
	top: 0;
	bottom: 60%;
	background-image: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
	background-image: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
	background-image: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
	background-image: -o-linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
	background-image: linear-gradient(top, rgba(0,0,0,1) 0%, transparent 100%);
	pointer-events: none;
}

#titles p
{
	text-align: justify;
	margin: 0.8em 0;
}

#titles p.center
{
	text-align: center;
}

#titles a
{
	color: #ff6;
	text-decoration: underline;
}

#titlecontent
{
	position: absolute;
	top: 100%;
	-webkit-animation: scroll 180s linear 0s infinite;
	-moz-animation: scroll 180s linear 0s infinite;
	-ms-animation: scroll 180s linear 0s infinite;
	-o-animation: scroll 180s linear 0s infinite;
	animation: scroll 180s linear 0s infinite;
}

/* animation */
@-webkit-keyframes scroll {
	0% { top: 100%; }
	100% { top: -170%; }
}

@-moz-keyframes scroll {
	0% { top: 100%; }
	100% { top: -170%; }
}

@-ms-keyframes scroll {
	0% { top: 100%; }
	100% { top: -170%; }
}

@-o-keyframes scroll {
	0% { top: 100%; }
	100% { top: -170%; }
}

@keyframes scroll {
	0% { top: 100%; }
	100% { top: -170%; }
}

